Prepare app for Render deployment

--- a/src/views/404.ejs
+++ b/src/views/404.ejs
@@ -3,7 +3,7 @@
 <section class="card glass-panel empty-state">
   <h1>Page Not Found</h1>
   <p>The page you requested does not exist.</p>
-  <a class="button glass-button" href="/">Go Home</a>
+  <a class="button glass-button" href="/calendar">Go Home</a>
 </section>
 
 <%- include("partials/bottom") %>
